--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,7 +18,7 @@
   background-image: url(../../assets/FrameFiscal.png);
 }
 .section9{
-  background-image: url(../../assets/Section9.png);
+  background-image: url(../../assets/Rural/SVG/BackgroundImage.png);
 }
 
 @layer base {
